Closed Bug 1884027 Opened 1 year ago Closed 1 year ago

Crash in [@ Microsoft::WRL::ComPtr<T>::InternalRelease] (CMFDXGIDeviceManager::~CMFDXGIDeviceManager)

Categories

(Core :: Audio/Video: Playback, defect, P2)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- unaffected
firefox124 --- unaffected
firefox125 --- fixed

People

(Reporter: RyanVM, Assigned: alwu)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/97015a49-da6f-4102-8738-44d6b0240306

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  mfplat.dll  Microsoft::WRL::ComPtr<IInspectable>::InternalRelease  
1  mfplat.dll  CMFDXGIDeviceManager::~CMFDXGIDeviceManager  
2  mfplat.dll  CMFDXGIDeviceManager::`vector deleting destructor'  
3  mfplat.dll  CMFDXGIDeviceManager::Release  
4  mfplat.dll  MFUnlockDXGIDeviceManager  
5  xul.dll  mozilla::MFMediaEngineParent::DestroyEngineIfExists  dom/media/ipc/MFMediaEngineParent.cpp:116
6  xul.dll  mozilla::MFMediaEngineParent::~MFMediaEngineParent  dom/media/ipc/MFMediaEngineParent.cpp:88
7  xul.dll  mozilla::MFMediaEngineParent::Release  dom/media/ipc/MFMediaEngineParent.h:39
7  xul.dll  mozilla::RefPtrTraits<mozilla::MFMediaEngineParent>::Release  mfbt/RefPtr.h:49
7  xul.dll  RefPtr<mozilla::MFMediaEngineParent>::ConstRemovingRefPtrTraits<mozilla::MFMediaEngineParent>::Release  mfbt/RefPtr.h:409
Assignee: nobody → alwu
Severity: -- → S3
Priority: -- → P3
Priority: P3 → P2

MFLock/UnlockDXGIDeviceManager() methods are used to ensure the thread
safefy across threads, because the media foundation might use it in
their own thread pool.

It doesn't help if we calling MFUnlockDXGIDeviceManager alone.

[1] https://learn.microsoft.com/en-us/windows/win32/api/mfapi/nf-mfapi-mfunlockdxgidevicemanager

Summary: Crash in [@ Microsoft::WRL::ComPtr<T>::InternalRelease] → Crash in [@ Microsoft::WRL::ComPtr<T>::InternalRelease] (CMFDXGIDeviceManager::~CMFDXGIDeviceManager)
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c5df1d85b65f no need to unlock device manager when destroying the engine. r=jolin
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Blocks: 1881620
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: