Bug 1884027 - no need to unlock device manager when destroying the engine. r=jolin

`MFLock/UnlockDXGIDeviceManager()` methods are used to ensure the thread
safefy across threads, because the media foundation might use it in
their own thread pool.

It doesn't help if we calling `MFUnlockDXGIDeviceManager` alone.

[1] https://learn.microsoft.com/en-us/windows/win32/api/mfapi/nf-mfapi-mfunlockdxgidevicemanager

Differential Revision: https://phabricator.services.mozilla.com/D203874