dom/media/ipc/MFMediaEngineParent.cpp
@@ -113,7 +113,6 @@ void MFMediaEngineParent::DestroyEngineIfExists(
   mRequestSampleListener.DisconnectIfExists();
   if (mDXGIDeviceManager) {
     mDXGIDeviceManager = nullptr;
-    wmf::MFUnlockDXGIDeviceManager();
   }
   if (aError) {
     Unused << SendNotifyError(*aError);
